--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,53 @@
 .Weather {
   border: 1px solid #dadde1;
+  font-family: Arial, sans-serif;
+  padding: 16px;
+
+  border-radius: 4px;
+}
+
+.Weather form {
+  margin-bottom: 20px;
+}
+
+.Weather h1 {
+  color: black;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 29px;
+}
+
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+
+.Weather .img {
+  height: 64;
+  margin-right: 10px;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+  color: black;
+  font-size: 64px;
+  line-height: 64px;
+  font-weight: 400;
+}
+
+.Weather .unit {
+  color: black;
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -34px;
+  margin-left: 5px;
 }
