--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,10 @@
   max-width: 600px;
   margin: 30px auto;
 }
-.footer {
+.App footer {
   font-size: 11px;
   margin: 10px 0;
+}
+a {
+  text-decoration: none;
 }
